--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ['main']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -18,7 +18,7 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
@@ -36,14 +36,14 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - name: Install npm-cli-login
-        run: npm install npm-cli-login
-      - name: Configure Bryntum registry
-        run: npm config set "@bryntum:registry=https://npm.bryntum.com"
+      # - name: Install npm-cli-login
+      #   run: npm install npm-cli-login
+      # - name: Configure Bryntum registry
+      #   run: npm config set "@bryntum:registry=https://npm.bryntum.com"
       - name: Check npm registry
-        run: npm config list      
-      - name: Log in to Brytum registry
-        run: npm-cli-login -u viktor.safar..geodata.no -p trial -e viktor.safar@geodata.no -r https://npm.bryntum.com
+        run: npm config list
+      # - name: Log in to Brytum registry
+      #   run: npm-cli-login -u viktor.safar..geodata.no -p trial -e viktor.safar@geodata.no -r https://npm.bryntum.com
       - name: Install dependencies
         run: npm ci
       - name: Build
