add npmjs registry to config

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+registry=https://registry.npmjs.org/
 @bryntum:registry=https://npm.bryntum.com
 //npm.bryntum.com/:username=viktor.safar..geodata.no
 //npm.bryntum.com/:_password=trial
