--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,4 @@ registry=https://registry.npmjs.org/
 @bryntum:registry=https://npm.bryntum.com
 //npm.bryntum.com/:username=viktor.safar..geodata.no
 //npm.bryntum.com/:_password=trial
+//npm.bryntum.com/:email:viktor.safar@geodata.no
